--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
-    "classnames": "^2.3.1",
+    "chart.js": "^3.7.1",
     "next": "12.1.6",
-    "prop-types": "^15.8.1",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.1.0",
     "styled-components": "^5.3.5"
   },
