--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:open": "cypress open",
+    "test:run": "cypress run",
+    "test:e2e": "start-server-and-test start http://localhost:3000 cypress",
+    "test:e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
@@ -18,12 +22,15 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@types/node": "17.0.33",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/styled-components": "^5.1.25",
+    "cypress": "^9.6.1",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "start-server-and-test": "^1.14.0",
     "typescript": "4.6.4"
   }
 }
