--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "chart.js": "^3.7.1",
+    "iron-session": "^6.1.3",
     "next": "12.1.6",
+    "octokit": "^1.7.1",
     "react": "18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "18.1.0",
