--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "chart.js": "^3.7.1",
     "iron-session": "^6.1.3",
     "next": "12.1.6",
-    "octokit": "^1.7.1",
     "react": "18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "18.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
